--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="app">
       <h1>Hello world!</h1>
     </div>
+    <p>some text</p>
     <img class="my-image" src="src/image/photo_2025-04-08_16-41-55.jpg">
     <script type="module" src="/src/main.js"></script>
   </body>
