--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <div id="app">
       <h1>Hello world!</h1>
     </div>
+    <p>some text</p>
+    <ul>
+      <li>1</li>
+      <li>1</li>
+      <li>1</li>
+      <li>1</li>
+    </ul>
     <img class="my-image" src="/vite-template/assets/photo_2025-04-08_16-41-55-94zU_4_x.jpg">
   </body>
 </html>
